# Employee_Management_System_2

./: CMakeLists.txt  Employee_Management.cpp  Employee_Management.h  Employee_Profile.cpp  Employee_Profile.h  Employee_Schedule.cpp  Employee_Schedule.h  Employee_Training.cpp  Employee_Training.h  main.cpp
.github/workflows/: scorecard.yml
